# zero_copy_graph_analytics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TESTING_SUMMARY.md  app.py  build.sh  clickhouse.py  config.tfvars.example  data.env.example  data_pipeline.py  deploy.sh  generate_data.py  generator.py  main.tf  outputs.tf  pyproject.toml  queries.py  requirements.txt  terraform.tfvars.example  user_data.sh  variables.tf
app/database/: clickhouse.py  connections.py
app/graph/: queries.py
app/pipeline/: data_pipeline.py
config/puppygraph/: puppygraph.properties  schema.json
deployments/hybrid/: .env.example  README.md  docker-compose.yml
deployments/hybrid/config/: puppygraph.json
deployments/local/: Dockerfile.clickhouse  README.md  docker-compose.yml  docker-entrypoint.sh
deployments/local/clickhouse/config/: custom-config.xml
deployments/local/clickhouse/init/: 01-create-database.sql
deployments/local/puppygraph/config/: fraud_graph.json  puppygraph.json  schema.json
deployments/local/scripts/: init-schemas.sh
docs/: README.md
docs/architecture/: README.md  data-model.md  system-overview.md
docs/demos/customer-360/: CYPHER-QUERIES.md  README.md  SQL-QUERIES.md
docs/demos/customer-360/queries/: cypher-01-customer-purchases.md  cypher-02-customer-network.md  cypher-03-product-relationships.md  cypher-04-collaborative-filtering.md  cypher-05-product-affinity.md  cypher-06-category-expansion.md  cypher-07-high-value-patterns.md  cypher-08-brand-loyalty.md  cypher-09-customer-journey.md  cypher-10-category-gap-opportunities.md  cypher-11-category-gap-analysis.md  cypher-12-popular-products-by-segment.md  cypher-13-category-preferences-segment.md  cypher-14-brand-performance-segments.md  cypher-15-two-hop-recommendations.md  cypher-16-complementary-products.md  cypher-17-similar-customers.md  cypher-18-network-density.md  cypher-19-low-engagement-vips.md  cypher-20-category-diversity.md  sql-01-customer-segmentation.md  sql-02-top-customers.md  sql-03-registration-trends.md  sql-04-transaction-volume.md  sql-05-purchase-behavior.md  sql-06-product-performance.md  sql-07-interaction-patterns.md  sql-08-engagement-score.md  sql-09-category-performance.md  sql-10-brand-affinity.md  sql-11-cohort-retention.md  sql-12-ltv-analysis.md  sql-13-cross-sell-opportunities.md  sql-14-basket-analysis.md  sql-15-recent-activity.md
docs/demos/fraud-detection/: CYPHER-QUERIES.md  README.md  SQL-QUERIES.md
docs/demos/fraud-detection/queries/: cypher-01-account-takeover-rings.md  cypher-02-money-laundering-cycles.md  cypher-03-fraud-ring-community-detection.md  cypher-04-pagerank-fraud-network-leaders.md  cypher-05-betweenness-centrality-money-mules.md  cypher-06-synthetic-identity-clusters.md  cypher-07-coordinated-attack-burst-detection.md  cypher-08-merchant-collusion-networks.md  cypher-09-money-flow-path-tracing.md  cypher-10-real-time-fraud-scoring.md  sql-01-shared-devices.md  sql-02-high-velocity-transactions.md  sql-03-round-number-transactions.md  sql-04-geographic-impossibility.md  sql-05-merchant-approval-rates.md  sql-06-synthetic-identity.md  sql-07-transaction-chains.md  sql-08-account-risk-scores.md  sql-09-burst-activity-patterns.md  sql-10-dormant-account-reactivation.md
docs/performance/: README.md  benchmarks.md  sql-vs-cypher-comparison.md
experimental/: README.md  persona_generator.py
secrets/: .env.example  README.md  terraform.tfvars.example
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
use-cases/customer-360/: README.md  generator.py  queries.cypher  queries.sql
use-cases/fraud-detection/: README.md  generator.py  queries.cypher  queries.sql
